fixed modal close button and modal close feature
User can tap outside modal to close it.
Added custom styling to scrollbar.

--- a/src/components/modal/styles.module.css
+++ b/src/components/modal/styles.module.css
@@ -15,12 +15,13 @@
   width: 80vw;
   max-height: 90vh;
   margin: 0 auto;
-  border-radius: 0.5rem;
+  border-radius: 6px;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding-bottom: 1.5rem;
   overflow-y: auto;
 }
 
@@ -28,20 +29,11 @@
   display: flex;
   justify-content: end;
   overflow: visible;
-}
-
-.closeIcon {
-  background-color: crimson;
-  overflow: visible;
-  border-radius: 0.5rem;
-}
-
-.closeIcon:hover {
-  background-color: #a81633;
+  padding: .75rem .75rem;
 }
 
 h3, p{
-  color: #EDF2F4;
+  color: #343a40;
 }
 img {
   max-height: 70vh;
